added my collections page

--- a/app/views/collections/my_index.html.erb
+++ b/app/views/collections/my_index.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h1>
-      All collections
+      My collections
     </h1>
   </div>
 </div>
@@ -56,7 +56,7 @@
         </th>
       </tr>
 
-      <% @list_of_collections.each do |a_collection| %>
+      <% @list_of_my_collections.each do |a_collection| %>
       <tr>
 
 
