--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -9,6 +9,8 @@
 <hr>
 
 <div>
+<%if session.fetch(:user_id) != nil %>
+
   <div>
     <h2>
       Add a new collection
@@ -29,6 +31,7 @@
     </form>
   </div>
 </div>
+<%end%>
 
 <hr>
 <div>
