--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -5,9 +5,9 @@
     </h1>
   </div>
 </div>
+<%if session.fetch(:user_id) != nil %>
 
 <hr>
-
 <div>
   <div>
     <h2>
@@ -59,6 +59,7 @@
     </form>
   </div>
 </div>
+<%end%>
 
 <hr>
 <div>
