image works on position details

--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -68,7 +68,7 @@
       <tr>
 
         <th>
-          Board state
+          Position
         </th>
 
         <th>
@@ -91,7 +91,7 @@
       <tr>
 
         <td>
-          <%= a_position.board_state %>
+    <img src= "<%=@a_position.stage%>">
         </td>
 
         <td>
