--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -11,7 +11,7 @@
         </a>
       </div>
 
-    <#img src= "http://fen2png.com/?fen=5rk1/pp4pp/4p3/2R3Q1/3n4/2q4r/P1P2PPP/5RK1"+ "b - - - " + "&raw=true">
+    <img src= "<%=@the_position.stage%>">
 
     <dl>
       <dt>
