--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -59,31 +59,29 @@
       <tr>
 
         <th>
-          Board state
+          Position
         </th>
 
         <th>
-          Notes
-        </th>
-
-        <th>
-          
+          View
         </th>
         <%if @the_collection.user_id == session.fetch(:user_id) %>
         <th>
-          
+          Remove
         </th>
-<%end%>
+        <%end%>
       </tr>
 
       <%@matching_collection_positions.each do |a_cp|%>
         <tr>
-        <td><%=Position.where({:id => a_cp.position_id}).first.board_state%></td>
-        <td></td>
+        <td>
+        <%current_position_image = Position.where({:id => a_cp.position_id}).first.stage%>
+        <img src="<%=current_position_image%>">
+        </td>
         <td><a href="/positions/<%= a_cp.position_id %>">View position</a></td>
         <%if @the_collection.user_id == session.fetch(:user_id) %>
         <td><a href="/delete_collection_position/<%=a_cp.id%>">Remove from collection</a></td>
-        <%end%>
+          <%end%>
         </tr>
       <%end%>
   </div>
