--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -40,12 +40,6 @@
       </div>
 
       <div>
-        <input type="checkbox" id="whose_turn_box" name="query_whose_turn" value="1">
-
-        <label for="whose_turn_box">White to move? (leave unchecked if Black to move)</label>
-      </div>
-
-      <div>
         <label for="notes_box">
           Notes
         </label>
@@ -91,7 +85,7 @@
       <tr>
 
         <td>
-    <img src= "<%=@a_position.stage%>">
+    <img src= "<%=a_position.stage%>">
         </td>
 
         <td>
